Fix completion